<resources>
    <string name="app_name">JavaIsFun</string>
    -
    <string name="textView1">perguntaperguntapergunta</string>
    -
    <string name="button5">O que é java?</string>
    -
    <string name="button6">Variáveis</string>
    -
    <string name="button7">Modificadores</string>
    -
    <string name="button8">Operadores</string>
    -
    <string name="button9">Classe</string>
    -
    <string name="button10">Métodos</string>
    -
    <string name="menu">Menu</string>
    <color name="white">#ffffff</color>

    -
    <string name="button1_medium">Scanner</string>
    -
    <string name="button2_medium">Cálculos</string>
    -
    <string name="button3_medium">Condição</string>
    -
    <string name="button4_medium">Laço de repetição</string>
    -
    <string name="button1_hard">Vetores</string>
    -
    <string name="button2_hard">Matrizes</string>
    -
    <string name="button3_hard">Objetos</string>
    -
    <string name="menu_hard">Menu</string>
    -
    <string name="menu_medium">Menu</string>

    <string name="basico">Básico</string>

    <string name="intermediario">Intermediário</string>
    <string name="avancado">Avançado</string>
    <string name="about_app">Sobre o app</string>
    <string name="about_us">Sobre nós</string>
    <string name="confirma_scanner_1">Confirmar</string>
    <string name="declare_um_scanner_denominado_s">Declare um Scanner denominado "s"</string>
    <string name="button">teste</string>
    <string name="buttonModelo">ButtonModelo</string>
    <string name="bchecar">OK</string>
    <string name="respostaUser">Digite oi </string>
    <string name="textview">TextView</string>
    <string name="bprox">Proximo</string>


    <string name="country_prompt">Escolha a variável</string>
    <string-array name="country_arrays">
        <item>int</item>
        <item>float</item>
        <item>boolean</item>
        <item>String</item>


    </string-array>

    <string-array name="country_arrays3">

        <item> if else</item>
        <item> else if</item>
        <item> else </item>
        <item> if </item>

    </string-array>
    <string-array name="country_arrays2">

        <item> == </item>
        <item> =! </item>
        <item> != </item>
        <item> = </item>

    </string-array>

    <string-array name="country_arrays4">

        <item> &amp;&amp; </item>
        <item> || </item>
        <item> &amp; </item>
        <item> | </item>

    </string-array>
    <string name="title_activity_laco_de_repeticao5">LacoDeRepeticao5</string>


</resources>